test/core/errors/union_types_error/zs/recursive_error.zs
package recursive_error;

union Recursive
{
    int32       field1;
    Recursive   field2;
};
